[build-system]
requires = ["setuptools", 
        "wheel", 
        "Cython",
        "numpy",
        "versioneer[toml]"
        ]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pyhmc/_version.py"
versionfile_build = "pyhmc/_version.py"
tag_prefix = "v"
parentdir_prefix = "pyhmc-"
